
1.8r9:
+ added: Armor regeneration timer
+ added: Inspire timer
+ added: Option for anti stealth grenades
+ added: Show interaction circle when charging melee
~ changed: AI names won't be colorized anymore

1.7r8:
+ added: seperate option for gage courier packages
+ added: detection risk of other players will be shown in stealth mode
+ added: Interaction info/time of other players
+ added: Name truncating according to killcounters, added rank
~ changed: Kill counters now align to the players name
~ changed: default options
~ fixed: push to interact in civilian mode (casino)

1.7r7:
- Added some screen skipping options.
- Added option for handling reload as interaction.
- Added option to disable the vanilla interaction circle.
- Push to interact now applies to exiting of vehicles as well.

1.7r6:
- the stamina meter now hides when in custody.
- the stamina meter now resizes according to ex-president perk deck presence.
- the down counter now shows pistol messiah charges like hoxhud does.
- reduced down counter font size from 20 to 14.

1.7r5:
- suspicion/interaction texts fixes

1.7r4:
- added keybinding defaults

earlier:
- see jackpack changelogs.