@@ -28,8 +28,9 @@ end
 function SentryGunBase:sync_setup(upgrade_lvl, peer_id, ...)
 	SentryGunBase.SPAWNED_SENTRIES[self._unit:key()].owner = peer_id
 	UnitBase._do_listener_callback("on_sentry_owner_update", self._unit, peer_id)
-	sync_setup_original(self, upgrade_lvl, peer_id, ...)
+	local result = sync_setup_original(self, upgrade_lvl, peer_id, ...)
 	self._owner_id = self._owner_id or peer_id
+	return result
 end
 function SentryGunBase:activate_as_module(...)
 	SentryGunBase.SPAWNED_SENTRIES[self._unit:key()] = nil
